--- a/game.html
+++ b/game.html
@@ -23,8 +23,8 @@
             background-color: red;
             border: 2px solid black;
             border-radius: 50%;
-            width: 50px;
-            height: 50px;
+            width: 70px;
+            height: 70px;
             position: absolute;
             bottom: 30px;
             left: 30px;
@@ -33,6 +33,12 @@
         .dealer-button:hover {
             cursor: pointer;
             background-color: lightcoral;
+        }
+
+        .dealer-text {
+            padding: 10%;
+            text-align: center;
+            position: relative;
         }
 
         /* Player areas */
@@ -62,6 +68,21 @@
         .player-2 {
             top: 50px;
             right: 50px;
+        }
+
+        /* Other Player Info */
+        .other-player-info {
+            right: 2mm;
+            width: 250px;
+            height: 300px;
+            border-width: 5mm;
+            border-style: inset;
+            border-color: black;
+            position: absolute;
+        }
+
+        .move-info {
+            font-family: 'Courier New', Courier, monospace;
         }
 
         /* Player Options */
@@ -111,6 +132,13 @@
             right: 10px;
         }
 
+        .pot-display {
+            top: 10px;
+            padding: 10%;
+            text-align: center;
+            position: relative;
+        }
+
         /* Card */
         .card {
             width: 50px;
@@ -126,25 +154,40 @@
             display: inline-block;
         }
     </style>
+    <script src="pokerai.js"></script>
     <script src="pokergame.js"></script>
     <script src="cards.js"></script>
     <script src="rank-hands.js"></script>
+    <script src="decisions.js"></script>
 </head>
 
 <body>
-    <div class="player-options">
-        <div class="options">Check</div>
-        <div class="options">Bet</div>
-        <div class="options">Fold</div>
+    <div class="player-options" style="visibility: hidden;">
+        <div class="options" onclick="makeCheck(0)" id="checkOrCall">Check</div>
+        <div class="options" onclick="makeBet(0)" id="betOrRaise">Bet</div>
+        <div class="options" onclick="makeFold(0)">Fold</div>
+        <div class="options" id="betOrRaiseAmount">
+            Bet Amount
+            <input type="number" id="betAmount" value="10">
+        </div>
+    </div>
+    <div class="other-player-info">
+        <div class="move-info">
+            <p id="moveInfo"></p>
+        </div>
     </div>
 
     <div class="table">
-        <div class="dealer-button" onclick="nextPlay()"></div>
+        <div class="dealer-button" onclick="startRound()">
+            <div class="dealer-text">
+                <p id="dealerText">Deal</p>
+            </div>
+        </div>
         <div class="player-area player-1">
-            <div class="player-chips" style="color: white;">100</div>
+            <div class="player-chips" id="player1-chips" style="color: white;">100</div>
         </div>
         <div class="player-area player-2">
-            <div class="player-chips" style="color: white;">100</div>
+            <div class="player-chips" id="player2-chips" style="color: white;">100</div>
         </div>
         <div class="community-cards">
             <script>
@@ -152,7 +195,11 @@
                 communityCards.renderCommunityCardsFirst();
             </script>
         </div>
-        <div class="pot"></div>
+        <div class="pot">
+            <div class="pot-display">
+                <p id="potDisplay">Pot: 0</p>
+            </div>
+        </div>
     </div>
     <div class="information">
         <div class="hand-information"></div>
